--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ span {
 }
 
 section {
-    display: flex;
+
     margin-bottom: 150px;
 }
 
@@ -43,4 +43,36 @@ section {
     background-image: url(background/01.jpg);
     background-repeat: no-repeat;
     background-position: right;
+    color: white;
+}
+
+.flex-container {
+    display: flex;
+}
+
+.Experience-item {
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    box-shadow: 10px 10px 40px grey;
+    border-radius: 5px;
+
+}
+
+
+h2 {
+    font-size: 40px;
+}
+
+#full-stack {
+    border-left: 7px solid tomato;
+}
+
+#baby {
+    border-left: 7px solid blue;
+}
+
+footer {
+    text-align: center;
 }
